clusterdefinition/deployment-trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  labels:
    app: trips
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registryiax7978.azurecr.io/tripinsights/trips:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trips
  name: trips-service
spec:
  selector:
    app: trips
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
