clusterdefinition/deployment-tripsviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
  labels:
    app: tripviewer
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registryiax7978.azurecr.io/tripinsights/tripviewer:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tripviewer
    workload: metrics
  name: tripviewer-service
  namespace: web
spec:
  selector:
    app: tripviewer
  ports:
    - port: 80
      name: http
      targetPort: 80
